# cool-duck-adventures

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  README.md  build.sh  compile.sh  config.toml  main.cpp  run  sidescroller.cbp  sidescroller.depend  sidescroller.layout  sprout2d
SFML/doc/: sfml.chm
include/: GSM.hpp  Game.hpp  MenuState.hpp  PlayState.hpp  Player.hpp  State.hpp
src/: GSM.cpp  GSM.hpp  Game.cpp  Game.hpp  MenuState.cpp  MenuState.hpp  PlayState.cpp  PlayState.hpp  Player.cpp  Player.hpp  Settings.hpp  State.cpp  State.hpp
